# Invest-sim

./: README.md  SETUP_QUICKSTART.md  pyproject.toml  requirements.txt  想法与设计初稿.docx
docs/: BACKTEST_FRAMEWORK.md
examples/: backtest_aggressive.json  backtest_config.json
invest-sim/: .gitignore  requirements-dev.txt  requirements.txt
invest-sim/app/: PROJECTION MODE 功能说明文档.md  app.py
invest-sim/backend/: __init__.py
invest-sim/docs/: BACKTEST_DEMO_GUIDE.md  ENVIRONMENT_SETUP.md
invest-sim/examples/: backtest_adaptive.json  backtest_balanced.json  backtest_conservative.json  balanced.json
invest-sim/invest-sim/: pyproject.toml
invest-sim/invest-sim/app/: app.py  app_generated_by_gemini.py  bridge.py  说明文档.md
invest-sim/invest-sim/data/: sample_prices.csv
invest-sim/invest-sim/invest_sim/: __init__.py  cli.py  data_loader.py  forward_simulator.py  option_simulator.py  strategies.py
invest-sim/invest-sim/invest_sim/backend/data/: __init__.py
invest-sim/invest-sim/invest_sim/backend/input_modeling/: fitting.py
invest-sim/invest_sim/: backtester.py  config.py  option_simulator.py  report.py  strategies.py
invest-sim/invest_sim/backend/data/: fake_data_loader.py
invest-sim/invest_sim/backend/input_modeling/: __init__.py
invest-sim/invest_sim/backend/risk/: __init__.py  risk_metrics.py
invest-sim/scripts/: generate_sample_data.py  run_backtest_demo.py
invest-sim/tests/: test_simulator.py
invest_sim/: data_models.py  option_simulator.py
invest_sim/backend/input_modeling/: distributions.py
