[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["invest_sim*"]

[project]
name = "invest-sim"
version = "0.1.0"
description = "Investment portfolio simulation toolkit"
authors = [{name = "SmartInvestment Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "rich>=13.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1"
]

[project.scripts]
invest-sim = "invest_sim.cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
